More compelling title

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Viridity Capital
 email: viridity.capital@gmail.com
 description: >-
-  Trading memes and tutorials.
+  Trading for virgins.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: viriditycapital
